# smoldb

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .vale.ini  CMakeLists.txt  Dockerfile  Makefile  Options.cmake  README.md  clang-format-lint-all.sh  cli-container.sh  cli.Dockerfile  cli.compose.yml  cmake-default-init.sh  compile_commands.json  conanfile.py  docker-compose.yaml  dummy-file.c  format-lint-staged.sh  smoldb  test-container.sh  test.Dockerfile  test.compose.yml
.ccls-cache/@@home@huynguyen@Code@c-and-cpp@smoldb/: @usr@include@alloca.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  @usr@include@bits@thread-shared-types.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@__sigset_t.h.blob  @usr@include@bits@types@clock_t.h.blob  @usr@include@bits@types@clockid_t.h.blob  @usr@include@bits@types@sigset_t.h.blob  @usr@include@bits@types@struct_timespec.h.blob  @usr@include@bits@types@struct_timeval.h.blob  @usr@include@bits@types@time_t.h.blob  @usr@include@bits@types@timer_t.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@uintn-identity.h.blob  @usr@include@bits@waitflags.h.blob  @usr@include@bits@waitstatus.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@endian.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdlib.h.blob  (+7 more)
.ccls-cache/@home@huynguyen@Code@c-and-cpp@smoldb/: src@cli@cli-handler.c.blob  src@cli@cli-handler.h  src@cli@cli-handler.h.blob  src@entry.c.blob  src@general.h.blob  src@internal@btree.c  src@internal@btree.c.blob  src@internal@btree.h.blob  src@internal@sql.c  src@internal@sql.c.blob  src@internal@sql.h  src@internal@sql.h.blob  src@internal@token-hash.c.blob  src@internal@token-hash.h  src@internal@token-hash.h.blob  src@internal@tokens.c.blob  src@internal@tokens.h.blob  src@retval.h.blob
.devcontainer/: Dockerfile  dev.container.Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: cmake-clang.yml  cmake-gcc.yml  cmake-multi-platform.yml  codeql.yml  makefile-clang.yml  makefile-gcc.yml
doc/: dev-env.md
docs/: dev-env.md  index.html  pull_request_template.md  smoldb.md
fuzztest/: CMakeLists.txt
include/smoldb/: smoldb.h
src/: CMakeLists.txt  entry.c  general.h  general.h.in  retval.h
src/c-api/: CMakeLists.txt  PLACEHOLDER.md
src/cli/: CMakeLists.txt  cli-handler.c  cli-handler.h
src/general/: CMakeLists.txt  general.h
src/internal/: CMakeLists.txt  btree.cpp  btree.h  sql.h  token-hash.c  token-hash.h  tokens.c  tokens.h
submodule/: CMakeLists.txt
test/: PLACEHOLDER.md
unittest/: CMakeLists.txt
